two pgs, opening times on second

--- a/index.html
+++ b/index.html
@@ -11,25 +11,32 @@
 
 <body>
     <main class="main-wrapper">
-        <div class="logo">
-            <img src="/img/SVG/unna-logo-web.svg" alt="">
-        </div>
-        <div class="logo-text"><span>BAGERI & KAFÉ</span></div>
-        <div class="address">
-            <span class="address-span">Centralgatan 24</span>
-            <span class="address-span">844 31 Hammarstrand</span>
-            <span class="address-span">Sweden</span>
-        </div>
-
+        <section class="section">
+            <div class="logo">
+                <img src="/img/SVG/unna-logo-web.svg" alt="">
+            </div>
+            <div class="logo-text"><span>BAGERI & KAFÉ</span></div>
+            <div class="address">
+                <span class="address-span">Centralgatan 24</span>
+                <span class="address-span">844 31 Hammarstrand</span>
+                <span class="address-span">Sweden</span>
+            </div>
+            
+        </section>
+        <section class="section">
+            <div class="open">
+                <span class="open-span">Ons-Tors: 07-15</span>
+                <span class="open-span">Fredag 07-16</span>
+                <span class="open-span">Mån, Tis & Sön Stängt</span>
+            </div>
+        </section>
+    </main>
+    <div class="circle-container">
         <div class="circle" id="circle1" style="border-radius: 50%;"></div>
         <div class="circle" id="circle2" style="border-radius: 50%;"></div>
         <div class="circle" id="circle3" style="border-radius: 50%;"></div>
-    </main>
-    
-    <div class="background">
-
     </div>
-
+    <div class="background"></div>
 
 
 
