no pointer events on pattern-background

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="circle" id="circle2" style="border-radius: 50%;"></div>
         <div class="circle" id="circle3" style="border-radius: 50%;"></div>
     </div>
-    <div class="background"></div>
+    <div class="pattern-background"></div>
 
 
 
