--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                 <span class="open-span">Fredag 07-16</span>
                 <span class="open-span">Mån, Tis & Sön Stängt</span>
             </div>
+            <div class="social">
+                <div class="insta">
+                    <img src="/img/icons8-instagram.svg" alt="">
+                </div>
+                <div class="facebook">
+                    <img src="/img/icons8-facebook.svg" alt="">
+                </div>
+            </div>
         </section>
     </main>
     <div class="circle-container">
