rolling ticker in

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 
 <body>
     <main class="main-wrapper">
+
         <section class="section">
             <div class="logo">
                 <img src="/img/SVG/unna-logo-web.svg" alt="">
             </div>
             <div class="logo-text"><span>BAGERI & KAFÉ</span></div>
+
+
+
             <div class="address">
                 <span class="address-span">Centralgatan 24</span>
                 <span class="address-span">844 31 Hammarstrand</span>
                 <span class="address-span">Sweden</span>
             </div>
-            
+
         </section>
         <section class="section">
             <div class="open">
@@ -39,6 +43,7 @@
             </div>
         </section>
     </main>
+
     <div class="circle-container">
         <div class="circle" id="circle1" style="border-radius: 50%;"></div>
         <div class="circle" id="circle2" style="border-radius: 50%;"></div>
@@ -46,10 +51,22 @@
     </div>
     <div class="pattern-background"></div>
 
+    <div class="ticker-wrapper">
+        <svg class="wave-text" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 200" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Define the wave path with explicit path length -->
+            <path id="wave" d="M0,100 Q200,20 400,100 T800,100" fill="none" stroke="white" stroke-width="50" />
+        
+            <!-- Add text along the wave path -->
+            <text font-size="24"  dominant-baseline="middle">
+                <textPath href="#wave" startOffset="0">
+                    Bröd Bullar Kaffe Lunch Soppa Fika Dryck&nbsp;Bröd Bullar Kaffe Lunch Soppa Fika Dryck&nbsp;
+                    <animate attributeName="startOffset" from="0%" to="-100%" dur="10s" repeatCount="indefinite" />
+                </textPath>
+            </text>
+        </svg>
+    </div>
 
-
-
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
