slower ticker, logo flex .75

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         <section class="section">
             <div class="open">
-                <span class="open-span">Ons-Tors: 07-15</span>
+                <span class="open-span">Ons-Tors 07-15</span>
                 <span class="open-span">Fredag 07-16</span>
                 <span class="open-span">Mån, Tis & Sön Stängt</span>
             </div>
@@ -52,15 +52,15 @@
     <div class="pattern-background"></div>
 
     <div class="ticker-wrapper">
-        <svg class="wave-text" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 200" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg class="wave-text" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 50" height="200" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Define the wave path with explicit path length -->
             <path id="wave" d="M0,100 Q200,20 400,100 T800,100" fill="none" stroke="white" stroke-width="50" />
         
             <!-- Add text along the wave path -->
-            <text font-size="24"  dominant-baseline="middle">
+            <text font-size="24">
                 <textPath href="#wave" startOffset="0">
                     Bröd Bullar Kaffe Lunch Soppa Fika Dryck&nbsp;Bröd Bullar Kaffe Lunch Soppa Fika Dryck&nbsp;
-                    <animate attributeName="startOffset" from="0%" to="-100%" dur="10s" repeatCount="indefinite" />
+                    <animate attributeName="startOffset" from="0%" to="-100%" dur="20s" repeatCount="indefinite" />
                 </textPath>
             </text>
         </svg>
