--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="main-wrapper">
 
-        <section class="section">
+        <section class="section section-head">
             <div class="logo">
                 <img src="/img/SVG/unna-logo-web.svg" alt="">
             </div>
@@ -27,7 +27,22 @@
             </div>
 
         </section>
-        <section class="section">
+
+        <section class="section section-photos">
+            <div class="photo-container">
+                <img src="/img/bullar.jpg" alt="bullar">
+                <img src="/img/baguette.jpg" alt="baguette">
+                <img src="/img/bowl3.jpg" alt="bowl">
+                <img src="/img/bullar2.jpg" alt="bullar">
+                <img src="/img/muffins.jpg" alt="muffins">
+                <img src="/img/macka1.jpg" alt="macka">
+                <img src="/img/bowl2.jpg" alt="lunch bowl">
+                <img src="/img/bowl1.jpg" alt="lunch bowl">
+                
+            </div>
+        </section>
+
+        <section class="section section-open">
             <div class="open">
                 <span class="open-span">Ons-Tors 07-15</span>
                 <span class="open-span">Fredag 07-16</span>
