photo captions in

--- a/index.html
+++ b/index.html
@@ -30,20 +30,54 @@
 
         <section class="section section-photos">
             <div class="photo-container">
-                <img src="/img/bullar.jpg" alt="bullar">
-                <img src="/img/baguette.jpg" alt="baguette">
-                <img src="/img/bowl3.jpg" alt="bowl">
-                <img src="/img/bullar2.jpg" alt="bullar">
-                <img src="/img/muffins.jpg" alt="muffins">
-                <img src="/img/macka1.jpg" alt="macka">
-                <img src="/img/bowl2.jpg" alt="lunch bowl">
-                <img src="/img/bowl1.jpg" alt="lunch bowl">
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/bullar.jpg" alt="bullar"></div>
+                    <div class="photo-text">Pyrfärska bullar</div>
+                </div>
+
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/bowl3.jpg" alt="bowl"></div>
+                    <div class="photo-text">Fräscha Luncher</div>
+                </div>
+                
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/brod1.jpg" alt="bröd"></div>
+                    <div class="photo-text">Nybakat bröd</div>
+                </div>
+
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/baguette.jpg" alt="baguette"></div>
+                    <div class="photo-text">Krispiga Baguetter</div>
+                </div>
+
+
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/bullar2.jpg" alt="bullar"></div>
+                    <div class="photo-text">Mumsiga Bakverk</div>
+                </div>
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/muffins.jpg" alt="muffins"></div>
+                    <div class="photo-text">För speciella tillfällen</div>
+                </div>
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/macka1.jpg" alt="macka"></div>
+                    <div class="photo-text">Mumsiga mackor</div>
+                </div>
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/bowl2.jpg" alt="lunch bowl"></div>
+                    <div class="photo-text">Gäst Kockar</div>
+                </div>
+                <div class="photo-item">
+                    <div class="photo-img"><img src="/img/bowl1.jpg" alt="lunch bowl"></div>
+                    <div class="photo-text">Lokala varor</div>
+                </div>
                 
             </div>
         </section>
 
         <section class="section section-open">
             <div class="open">
+                <span class="open-span">Varmt Välkomna!</span>
                 <span class="open-span">Ons-Tors 07-15</span>
                 <span class="open-span">Fredag 07-16</span>
                 <span class="open-span">Mån, Tis & Sön Stängt</span>
