move ticker down a bit

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
                 <div class="photo-item">
                     <div class="photo-img"><img src="/img/baguette.jpg" alt="baguette"></div>
-                    <div class="photo-text">Krispiga Baguetter</div>
+                    <div class="photo-text">Krispiga baguetter</div>
                 </div>
 
 
                 <div class="photo-item">
                     <div class="photo-img"><img src="/img/bullar2.jpg" alt="bullar"></div>
-                    <div class="photo-text">Mumsiga Bakverk</div>
+                    <div class="photo-text">Mumsiga bakverk</div>
                 </div>
                 <div class="photo-item">
                     <div class="photo-img"><img src="/img/muffins.jpg" alt="muffins"></div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="photo-item">
                     <div class="photo-img"><img src="/img/bowl2.jpg" alt="lunch bowl"></div>
-                    <div class="photo-text">Gäst Kockar</div>
+                    <div class="photo-text">Gäst kockar</div>
                 </div>
                 <div class="photo-item">
                     <div class="photo-img"><img src="/img/bowl1.jpg" alt="lunch bowl"></div>
@@ -103,7 +103,7 @@
     <div class="ticker-wrapper">
         <svg class="wave-text" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 50" height="200" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Define the wave path with explicit path length -->
-            <path id="wave" d="M0,100 Q200,20 400,100 T800,100" fill="none" stroke="white" stroke-width="50" />
+            <path id="wave" d="M0,100 Q200,20 400,100 T800,100" fill="none"/>
         
             <!-- Add text along the wave path -->
             <text font-size="24">
