wide screen adj

--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
     <main class="main-wrapper">
 
         <section class="section section-head">
-            <div class="logo">
-                <img src="/img/SVG/unna-logo-web.svg" alt="">
+            <div class="logo-wrapper">
+                <div class="logo">
+                    <img src="/img/SVG/unna-logo-web.svg" alt="">
+                </div>
+                <div class="logo-text"><span>BAGERI & KAFÉ</span></div>
+                <div class="address">
+                    <span class="address-span">Centralgatan 24</span>
+                    <span class="address-span">844 31 Hammarstrand</span>
+                    <span class="address-span">Sweden</span>
+                </div>
             </div>
-            <div class="logo-text"><span>BAGERI & KAFÉ</span></div>
 
 
 
-            <div class="address">
-                <span class="address-span">Centralgatan 24</span>
-                <span class="address-span">844 31 Hammarstrand</span>
-                <span class="address-span">Sweden</span>
-            </div>
+            
 
         </section>
 
