delete height on photo section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+
+    <div class="testel">Test</Textarea></div>
+
+    Text Here
     <main class="main-wrapper">
 
         <section class="section section-head">
