photo section scrolls within 100% height

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="testel">Test</Textarea></div>
+    <!-- <div class="testel">Test</Textarea></div> -->
 
     Text Here
     <main class="main-wrapper">
