interSec Obsrv on photos

--- a/index.html
+++ b/index.html
@@ -34,46 +34,65 @@
 
         <section class="section section-photos">
             <div class="photo-container">
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/bullar.jpg" alt="bullar"></div>
-                    <div class="photo-text">Pyrfärska bullar</div>
+
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/bullar.jpg" alt="bullar"></div>
+                        <div class="photo-text off-frame">Pyrfärska bullar</div>
+                    </div>
                 </div>
 
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/bowl3.jpg" alt="bowl"></div>
-                    <div class="photo-text">Fräscha Luncher</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/bowl3.jpg" alt="bowl"></div>
+                        <div class="photo-text off-frame">Fräscha luncher</div>
+                    </div>
                 </div>
 
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/brod1.jpg" alt="bröd"></div>
-                    <div class="photo-text">Nybakat bröd</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/brod1.jpg" alt="bröd"></div>
+                        <div class="photo-text off-frame">Nybakat bröd</div>
+                    </div>
                 </div>
 
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/baguette.jpg" alt="baguette"></div>
-                    <div class="photo-text">Krispiga baguetter</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/baguette.jpg" alt="baguette"></div>
+                        <div class="photo-text off-frame">Krispiga baguetter</div>
+                    </div>
                 </div>
 
 
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/bullar2.jpg" alt="bullar"></div>
-                    <div class="photo-text">Mumsiga bakverk</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/bullar2.jpg" alt="bullar"></div>
+                        <div class="photo-text off-frame">Goda bakverk</div>
+                    </div>
                 </div>
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/muffins.jpg" alt="muffins"></div>
-                    <div class="photo-text">För speciella tillfällen</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/muffins.jpg" alt="muffins"></div>
+                        <div class="photo-text off-frame">För speciella tillfällen</div>
+                    </div>
                 </div>
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/macka1.jpg" alt="macka"></div>
-                    <div class="photo-text">Mumsiga mackor</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/macka1.jpg" alt="macka"></div>
+                        <div class="photo-text off-frame">Mumsiga mackor</div>
+                    </div>
                 </div>
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/bowl2.jpg" alt="lunch bowl"></div>
-                    <div class="photo-text">Gäst kockar</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/bowl2.jpg" alt="lunch bowl"></div>
+                        <div class="photo-text off-frame">Gäst kockar</div>
+                    </div>
                 </div>
-                <div class="photo-item">
-                    <div class="photo-img"><img src="/img/bowl1.jpg" alt="lunch bowl"></div>
-                    <div class="photo-text">Lokala varor</div>
+                <div class="photo-item-wrapper">
+                    <div class="photo-item off-frame">
+                        <div class="photo-img"><img src="/img/bowl1.jpg" alt="lunch bowl"></div>
+                        <div class="photo-text off-frame">Lokala varor</div>
+                    </div>
                 </div>
 
             </div>
