open section moved to end of photo sec

--- a/index.html
+++ b/index.html
@@ -98,33 +98,35 @@
                         <div class="photo-text off-frame">Lokala varor</div>
                     </div>
                 </div>
-
             </div>
+
+            <div class="open-container">
+                <div class="open">
+                    <span class="open-span">Varmt Välkomna!</span>
+                    <span class="open-span">Ons-Tors 07-15</span>
+                    <span class="open-span">Fredag 07-16</span>
+                    <span class="open-span">Mån, Tis & Sön Stängt</span>
+                </div>
+                <div class="social">
+                    <div class="insta">
+                        <img src="/img/icons8-instagram.svg" alt="">
+                    </div>
+                    <div class="facebook">
+                        <img src="/img/icons8-facebook.svg" alt="">
+                    </div>
+                </div>
+                <div class="circle-container">
+                    <div class="circle" id="circle1" style="border-radius: 50%;"></div>
+                    <div class="circle" id="circle2" style="border-radius: 50%;"></div>
+                    <div class="circle" id="circle3" style="border-radius: 50%;"></div>
+                </div>
+                <div class="pattern-background"></div>
+            </div>
+
+
         </section>
 
-        <section class="section section-open">
-            <div class="open">
-                <span class="open-span">Varmt Välkomna!</span>
-                <span class="open-span">Ons-Tors 07-15</span>
-                <span class="open-span">Fredag 07-16</span>
-                <span class="open-span">Mån, Tis & Sön Stängt</span>
-            </div>
-            <div class="social">
-                <div class="insta">
-                    <img src="/img/icons8-instagram.svg" alt="">
-                </div>
-                <div class="facebook">
-                    <img src="/img/icons8-facebook.svg" alt="">
-                </div>
-            </div>
-            <div class="circle-container">
-                <div class="circle" id="circle1" style="border-radius: 50%;"></div>
-                <div class="circle" id="circle2" style="border-radius: 50%;"></div>
-                <div class="circle" id="circle3" style="border-radius: 50%;"></div>
-            </div>
-            <div class="pattern-background"></div>
-        </section>
-
+  
 
 
     </main>
