--- a/index.html
+++ b/index.html
@@ -42,28 +42,32 @@
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/bullar.jpg" alt="bullar"></div>
-                        <div class="photo-text off-frame">Pyrfärska bullar</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Pyrfärska bullar</span>
+                        <p class="photo-text-para">Bakade samma morgon</p></div>
                     </div>
                 </div>
 
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/bowl3.jpg" alt="bowl"></div>
-                        <div class="photo-text off-frame">Fräscha luncher</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Fräscha luncher</span>
+                        <p class="photo-text-para">Varierande menu dagligen, men alltid samma höga kvalitet</p></div>
                     </div>
                 </div>
 
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/brod1.jpg" alt="bröd"></div>
-                        <div class="photo-text off-frame">Nybakat bröd</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Nybakat bröd</span>
+                        <p class="photo-text-para">Från mjukt och fluffigt till rejält och nyttigt. Kom in och känn doften av vad du dras till idag</p></div>
                     </div>
                 </div>
 
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/baguette.jpg" alt="baguette"></div>
-                        <div class="photo-text off-frame">Krispiga baguetter</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Krispiga baguetter</span>
+                        <p class="photo-text-para">Ett litet Frankrike mitt i Hammarstrand</p></div>
                     </div>
                 </div>
 
@@ -71,31 +75,36 @@
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/bullar2.jpg" alt="bullar"></div>
-                        <div class="photo-text off-frame">Goda bakverk</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Goda bakverk</span>
+                        <p class="photo-text-para">Goda sötsaker hör alltid till menyn</p></div>
                     </div>
                 </div>
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/muffins.jpg" alt="muffins"></div>
-                        <div class="photo-text off-frame">För speciella tillfällen</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">För speciella tillfällen</span>
+                        <p class="photo-text-para">Halloween, Påsk, Lucia eller Midsommar, vi har det där lilla extra för alla tillfällen</p></div>
                     </div>
                 </div>
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/macka1.jpg" alt="macka"></div>
-                        <div class="photo-text off-frame">Mumsiga mackor</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Mumsiga mackor</span>
+                        <p class="photo-text-para">Kallrökt röding, Älg eller vegetarisk, kom in och kika vad vi erbjuder för dagen </p></div>
                     </div>
                 </div>
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/bowl2.jpg" alt="lunch bowl"></div>
-                        <div class="photo-text off-frame">Gäst kockar</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Gäst kockar</span>
+                        <p class="photo-text-para">I sammarbete med lokala matkreatörer erbjuder vi allt från asiatiska bowls till klassisk Jämtländsk Älg stek</p></div>
                     </div>
                 </div>
                 <div class="photo-item-wrapper">
                     <div class="photo-item off-frame">
                         <div class="photo-img"><img src="/img/bowl1.jpg" alt="lunch bowl"></div>
-                        <div class="photo-text off-frame">Lokala varor</div>
+                        <div class="photo-text off-frame"><span class="photo-text-head">Lokala varor</span>
+                        <p class="photo-text-para">Allt på våra tallrikar har alldrig vart i stocklholm eller spanien</p></div>
                     </div>
                 </div>
             </div>
